--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    cursor: none;
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
