Remove visible cursor on map

--- a/src/components/map.css
+++ b/src/components/map.css
@@ -21,6 +21,10 @@
     border-top-color: black;
   }
 
+  .maplibregl-canvas-container.maplibregl-interactive {
+    cursor: none;
+  }
+
   .maplibregl-popup-content {
     background: black;
     color: white;
