--- a/src/components/map.css
+++ b/src/components/map.css
@@ -1,35 +1,80 @@
 .map-wrap {
-    position: relative;
-    width: 100%;
-    height: calc(100vh - 77px); /* calculate height of the screen minus the heading */
-  }
-  
-  .map {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+  position: relative;
+  width: 100%;
+  height: calc(100vh - 77px);
+  /* calculate height of the screen minus the heading */
+}
+
+.map {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.maplibregl-ctrl-top-right,
+.maplibregl-ctrl-bottom-right,
+.maplibregl-ctrl-bottom-left {
+  display: none;
+}
+
+.maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
+  display: none;
+  border-top-color: black;
+}
+
+.maplibregl-canvas-container.maplibregl-interactive {
+  cursor: none;
+}
+
+.maplibregl-popup-content {
+  background: black;
+  color: white;
+}
+
+.popup-container .time {
+  text-align: right;
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0.1);
+    opacity: 1;
   }
 
-  .maplibregl-ctrl-top-right,
-  .maplibregl-ctrl-bottom-right,
-  .maplibregl-ctrl-bottom-left   {
-    display: none;
+  100% {
+    transform: scale(4);
+    opacity: 0;
   }
+}
 
-  .maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
-    display: none;
-    border-top-color: black;
-  }
+.ripple-container {
+  position: relative;
+  width: 30px;
+  height: 30px;
+}
 
-  .maplibregl-canvas-container.maplibregl-interactive {
-    cursor: none;
-  }
+.ripple-container svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
-  .maplibregl-popup-content {
-    background: black;
-    color: white;
-  }
+.ripple {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: red;
+  animation: ripple 3s cubic-bezier(0.25, 1, 0.5, 1) infinite;
+  opacity: 0;
+}
 
-  .popup-container .time {
-    text-align: right;
-  }
+.ripple:nth-child(2) {
+  animation-delay: 1.5s;
+}
+
+.ripple:nth-child(3) {
+  animation-delay: 3s;
+}
