--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 }
 
 body {
+    background-color: #000;
+    color: #fff;
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
